# wb-mqtt-voice

./: .dockerignore  .gitignore  .repin.toml  .scope-guard.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.x86_64  README.md  UV_MIGRATION.md  config-example.toml  install-irene.sh  pyproject.toml  pyrightconfig.json  refactoring.md  sitecustomize.py
ESP32/firmware/common/: CMakeLists.txt
ESP32/firmware/common/include/audio/: audio_manager.hpp  vad_processor.hpp  wake_word_detector.hpp
ESP32/firmware/common/include/core/: config_manager.hpp  state_machine.hpp  task_manager.hpp  types.hpp
ESP32/firmware/common/include/hardware/: i2s_driver.hpp
ESP32/firmware/common/include/network/: network_manager.hpp  tls_manager.hpp  websocket_client.hpp  wifi_manager.hpp
ESP32/firmware/common/include/ota/: ota_manager.hpp
ESP32/firmware/common/include/ui/: ui_controller.hpp
ESP32/firmware/common/include/utils/: ring_buffer.hpp
ESP32/firmware/common/src/audio/: audio_manager.cpp  vad_processor.cpp  wake_word_detector.cpp
ESP32/firmware/common/src/core/: config_manager.cpp  state_machine.cpp  task_manager.cpp
ESP32/firmware/common/src/hardware/: codec_es8311.cpp  i2s_driver.cpp  rtc_pcf85063.cpp  touch_ft6236.cpp
ESP32/firmware/common/src/network/: network_manager.cpp  tls_manager.cpp  websocket_client.cpp  wifi_manager.cpp
ESP32/firmware/common/src/ota/: ota_manager.cpp
ESP32/firmware/common/src/ui/: display_manager.cpp  themes.cpp  ui_controller.cpp
ESP32/firmware/common/src/utils/: ring_buffer.cpp
(+1018 files in other folders)
